--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
-{ 
-   "name": "ldrobillard.com", 
-   "version": "1.0.0", 
-   "description": "ldrobillard.com", 
-   "scripts": { 
-     "lite": "lite-server –port 10001", 
-     "start": "npm run lite" 
-   }, 
-   "author": "", 
-   "license": "ISC", 
-   "devDependencies": { 
-     "lite-server": "^1.3.1" 
-   } 
+{
+  "name": "ldrobillard.com",
+  "version": "1.0.0",
+  "description": "ldrobillard.com",
+  "scripts": {
+    "lite": "lite-server –port 10001",
+    "start": "npm run lite"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "lite-server": "^1.3.1"
+  },
+  "main": "main.js",
+  "dependencies": {
+    "gulp": "^3.9.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LouisDavidRobillard/ldrobillard.com.git"
+  },
+  "bugs": {
+    "url": "https://github.com/LouisDavidRobillard/ldrobillard.com/issues"
+  },
+  "homepage": "https://github.com/LouisDavidRobillard/ldrobillard.com#readme"
 }
