--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "less-plugin-autoprefix": "^1.5.1",
     "lite-server": "^1.3.1"
   },
   "main": "main.js",
