--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "main": "main.js",
   "dependencies": {
+    "angular-fullpage.js": "^0.2.3",
     "gulp": "^3.9.1"
   },
   "repository": {
